add_executable(mycpp 01IO/mycp.cpp)
add_executable(delete10line 01IO/delete10line.cpp)
add_executable(simpledup 01IO/simpledup.cpp)

add_executable(glob 02file_system/glob.cpp)
add_executable(mydu 02file_system/mydu.cpp)
add_executable(userinfo 02file_system/userinfo.cpp)
add_executable(timelog 02file_system/timelog.cpp)

add_executable(fork1 03process/fork.cpp)

add_executable(signal 04parallel/signal/signal.cpp)
add_executable(5sec_calc1 04parallel/signal/5sec_calc.cpp)
add_executable(slowcat 04parallel/signal/slowcat.cpp)
add_executable(slowcat2 04parallel/signal/slowcat2.cpp)
add_executable(slowcat3 04parallel/signal/slowcat3.cpp)
add_executable(signal2 04parallel/signal/signal2.cpp)
